--- a/MyPHesabdari/Pages/Expenses.razor
+++ b/MyPHesabdari/Pages/Expenses.razor
@@ -5,34 +5,43 @@
 <h1>هزینه ها</h1>
 
 
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="form-group">
-                تاریخ: <input @bind="Expense.ExpenseDate" type="date" class="form-control" placeholder="" />
-            </div>
-            <div class="form-group">
-                عنوان: <input @bind="Expense.Description" class="form-control" placeholder="مثلا نان یا ..." />
-            </div>
-            <div class="form-group">
-                مبلغ: <input @bind="Expense.Amount" class="form-control" type="number" placeholder="2.000" />
-            </div>
-            <div class="form-group">
-                پرداخت کننده: <input @bind="Expense.Payer" class="form-control" placeholder="" />
-            </div>
-            <div class="form-group">
-                دسته هزینه: <select @bind="Expense.CostId" class="form-control select2">
-                    @if(costList!=null)
+<div class="row">
+    <div class="col-sm-12">
+        <div class="form-group">
+            تاریخ: <input @bind="Expense.ExpenseDate" type="date" class="form-control" placeholder="" />
+        </div>
+        <div class="form-group">
+            عنوان: <input @bind="Expense.Description" class="form-control" placeholder="مثلا نان یا ..." />
+        </div>
+        <div class="form-group">
+            مبلغ: <input @bind="Expense.Amount" class="form-control" type="number" placeholder="2.000" />
+        </div>
+        <div class="form-group">
+            پرداخت کننده: <input @bind="Expense.Payer" class="form-control" placeholder="" />
+        </div>
+        <div class="form-group">
+            دسته هزینه: <select @bind="Expense.CostId" class="form-control select2">
+                @if (costList != null)
                     @foreach (var item in costList)
                     {
                         <option value="@item.Id">@item.Name</option>
                     }
-                </select>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-info" @onclick="Save">ثبت</button>
-            </div>
+            </select>
+        </div>
+        <div class="form-group">
+            واحد پولی: <select @bind="Expense.CurrencyUnitId" class="form-control select2">
+                @if (currencyList != null)
+                    @foreach (var item in currencyList)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+            </select>
+        </div>
+        <div class="form-group">
+            <button class="btn btn-info" @onclick="Save">ثبت</button>
         </div>
     </div>
+</div>
 
 
 
@@ -44,10 +53,12 @@
 
     protected override async Task OnInitializedAsync()
     {
-        costList = await context.Costs.ToListAsync();
+        costList = await context.Costs.ToListAsync().ConfigureAwait(true);
+        currencyList = await context.CurrencyUnits.ToListAsync().ConfigureAwait(true);
         await base.OnInitializedAsync();
     }
     private List<MyPHesabdari.Model.Cost> costList;
+    private List<MyPHesabdari.Model.CurrencyUnit> currencyList;
     private MyPHesabdari.Model.Expense Expense = new Model.Expense();
 
 
