--- a/MyPHesabdari/Shared/MainLayout.razor
+++ b/MyPHesabdari/Shared/MainLayout.razor
@@ -1,12 +1,11 @@
 ﻿@inherits LayoutComponentBase
-
 <div class="sidebar">
     <NavMenu />
 </div>
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <small>SM Team</small>
     </div>
 
     <div class="content px-4">
