--- a/MyPHesabdari/_Imports.razor
+++ b/MyPHesabdari/_Imports.razor
@@ -8,3 +8,5 @@
 @using MyPHesabdari
 @using MyPHesabdari.Shared
 @using NEvaldas.Blazor.Select2
+@using Microsoft.Extensions.Localization
+@using Model 
