--- a/MyPHesabdari/Pages/Cost.razor
+++ b/MyPHesabdari/Pages/Cost.razor
@@ -1,8 +1,9 @@
 ﻿@page "/cost"
 @using Microsoft.EntityFrameworkCore
-@inject MyPHesabdari.Model.MyDbContext context
+@inject IMyContext context
 @inject IJSRuntime JSRuntime
-<h1>دسته بندی:</h1>
+@inject IStringLocalizer<SharedRes> Loc
+<h1>@Loc["Categories"]</h1>
 
 
 @if (AddMode)
@@ -10,10 +11,10 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="form-group">
-                نام دسته: <input @bind="name" class="form-control" placeholder="مثلا خوراک یا ..." />
+                @Loc["Category"] <input @bind="name" class="form-control" placeholder="@Loc["CategoryPlaceHolder"]" />
             </div>
             <div class="form-group">
-                دسته پدر: <select @bind="parentId" class="form-control select2">
+                @Loc["ParentCategory"] <select @bind="parentId" class="form-control select2">
                     <option value="0">Select Parent</option>
                     @foreach (var item in costList)
                     {
@@ -22,14 +23,14 @@
                 </select>
             </div>
             <div class="form-group">
-                <button class="btn btn-info" @onclick="Save">ثبت</button>
+                <button class="btn btn-info" @onclick="Save">@Loc["Submit"]</button>
             </div>
         </div>
     </div>
 }
 else
 {
-    <button class="btn btn-primary" @onclick="AddNew">افزودن جدید</button>
+<button class="btn btn-primary" @onclick="AddNew">@Loc["New"]</button>
 }
 
 
@@ -42,7 +43,7 @@ else
             <tr>
                 <td>@item.Name</td>
                 <td>
-                    <span class="btn btn-danger" @onclick="_ => DeleteItem(item.Id)">Delete</span>
+                    <span class="btn btn-danger" @onclick="(async _ =>await DeleteItem(item.Id))">@Loc["Delete"]</span>
                 </td>
             </tr>
         }
