--- a/MyPHesabdari/Pages/_Host.cshtml
+++ b/MyPHesabdari/Pages/_Host.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @namespace MyPHesabdari.Pages
+@inject Microsoft.Extensions.Localization.IStringLocalizer<SharedRes> L
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
@@ -10,17 +11,28 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>حسابداری شخصی</title>
+    <title>@L["AppTitle"]</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" />
-    
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
+
+@{
+    //this is not needed anymore
+//this.Response.Cookies.Append(
+//    CookieRequestCultureProvider.DefaultCookieName,
+//    CookieRequestCultureProvider.MakeCookieValue(
+//        new RequestCulture(
+//            CultureInfo.CurrentCulture,
+//            CultureInfo.CurrentUICulture)));
+    }
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
+
+
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
@@ -32,7 +44,6 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
     <script src="_framework/blazor.server.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -40,14 +51,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     @*<script src="_content/NEvaldas.Blazor.Select2/select2.blazor.js"></script>*@
     <script>
-        $(document).ready(function () {
-            $(".select2").select2(
-                {
-                    placeholder: "طبقه بندی اختیاری",
-                    allowClear: true
-                }
-            );
-        });
+
     </script>
 </body>
 </html>
+
+ 
