--- a/MyPHesabdari/wwwroot/css/site.css
+++ b/MyPHesabdari/wwwroot/css/site.css
@@ -51,7 +51,8 @@ app {
         }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    
+    background-color: rgba(0,0,0,0.8);
 }
 
     .sidebar .top-row {
