--- a/MyPHesabdari/Pages/_Host.cshtml
+++ b/MyPHesabdari/Pages/_Host.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/"
 @namespace MyPHesabdari.Pages
+@using System.Globalization
+@using Microsoft.AspNetCore.Localization
 @inject Microsoft.Extensions.Localization.IStringLocalizer<SharedRes> L
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
@@ -19,14 +21,13 @@
 </head>
 <body>
 
-@{
-    //this is not needed anymore
-//this.Response.Cookies.Append(
-//    CookieRequestCultureProvider.DefaultCookieName,
-//    CookieRequestCultureProvider.MakeCookieValue(
-//        new RequestCulture(
-//            CultureInfo.CurrentCulture,
-//            CultureInfo.CurrentUICulture)));
+    @{
+        this.HttpContext.Response.Cookies.Append(
+            CookieRequestCultureProvider.DefaultCookieName,
+            CookieRequestCultureProvider.MakeCookieValue(
+                new RequestCulture(
+                    CultureInfo.CurrentCulture,
+                    CultureInfo.CurrentUICulture)));
     }
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -56,4 +57,3 @@
 </body>
 </html>
 
- 
