--- a/MyPHesabdari/Pages/Expenses.razor
+++ b/MyPHesabdari/Pages/Expenses.razor
@@ -23,7 +23,7 @@
                 </span>
             </div>
             <div class="form-group">
-                @L["Amount"]: <input @bind="Expense.Amount" class="form-control" type="number" placeholder="@L["Amount"]" required />
+                @L["Amount"]: <input @bind="Expense.Amount" class="form-control" type="text" pattern="[0-9]+([\,][0-9]+)?" placeholder="@L["Amount"]" />
                 <span class="text-danger">
                     <ValidationMessage For="@(()=>Expense.Amount)" />
                 </span>
