--- a/MyPHesabdari/Shared/MainLayout.razor
+++ b/MyPHesabdari/Shared/MainLayout.razor
@@ -1,11 +1,16 @@
 ﻿@inherits LayoutComponentBase
+@inject IStringLocalizer<SharedRes> L
 <div class="sidebar">
     <NavMenu />
 </div>
 
 <div class="main">
-    <div class="top-row px-4">
-        <small>SM Team</small>
+
+    <div class="top-row">
+        <div class="px-4">
+            <small>SM Team</small>
+        </div>
+
     </div>
 
     <div class="content px-4">
