--- a/MyPHesabdari/Shared/NavMenu.razor
+++ b/MyPHesabdari/Shared/NavMenu.razor
@@ -28,14 +28,18 @@
                 <span class="oi oi-eye" aria-hidden="true"></span> @L["ExpensesList"]
             </NavLink>
         </li>
-
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Language">
                 <span class="oi oi-compass" aria-hidden="true"></span> @L["Lang"]
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/account/login?handler=logout">
+                <span class="oi oi-account-logout" aria-hidden="true"></span> @L["LogOut"]
+            </NavLink>
+        </li>
 
-        
+
 
     </ul>
 </div>
